homebox/helm/homebox/service.yaml
---
# Source: homebox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  labels:
    helm.sh/chart: homebox-0.1.2
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
    app.kubernetes.io/version: "0.20.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7745
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
